--- a/style.css
+++ b/style.css
@@ -4,9 +4,14 @@
     font-family: 'Poppins', sans-serif;
     box-sizing: border-box;
 }
+
+html {
+    scroll-behavior: smooth;
+}
+
 body{
-    color: #cfcdcd;
-    background-image: url(images/homeBackground.jpg);
+    color: #3b467c;
+    background-image: url(images/homeBackground.png);
     background-position: center;
     background-size: cover;
     background-attachment: fixed;
@@ -16,9 +21,11 @@ body{
 }
 
 body h1{
+    font-family: 'Kumar One Outline';
+
     font-weight: 550;
     font-size: 72px;
-    color: #222222;
+    color: #3b467c;
 }
 
 #home{
@@ -37,7 +44,8 @@ nav{
     align-items: center;
     justify-content: space-between;
     flex-wrap: wrap;
-    background-color: #222222;
+    background-color: transparent;
+    backdrop-filter: blur(160px);
     padding: 10px 5%;
     z-index: 1000;
 }
@@ -46,28 +54,29 @@ nav{
     width: 60px;
 }
 
-nav ul li{
+
+nav .nav-links ul li{
     display: inline-block;
     list-style: none;
     margin: 10px 10px;
 }
 
-nav ul li a{
-    color: #f5ede1;
+nav .nav-links ul li a{
+    color: #3b467c;
     text-decoration: none;
     font-size: 18px;
     position: relative;
 }
 
-nav ul li a span{
-    color:#4e7d7d;
+nav .nav-links ul li a span{
+    color:#3b467c;
 }
 
-nav ul li a::after{
+nav .nav-links ul li a::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #4e7d7d;
+    background-color: #3b467c;
 
     position: absolute;
     left: 0;
@@ -75,13 +84,40 @@ nav ul li a::after{
     transition: 0.5s;
 }
 
-nav ul li a:hover{
-    color: #cfcdcd;
+nav .nav-links ul li a:hover{
+    color: #6e78a5;
 }
 
-nav ul li a:hover::after{
+nav .nav-links ul li a:hover::after{
     width: 100%;
 }
+
+nav .social-media{
+    padding: 0 60px;
+}
+
+nav .social-media ul li{
+    display: inline-block;
+    margin-right: 20px;
+    color:#3b467c;
+    font-size: 30px;
+    cursor: pointer;
+    transition: transform 0.5s;
+
+}
+
+nav .social-media ul li a{
+    color: #3b467c;
+}
+
+nav .social-media ul li:hover{
+    transform: translateY(-5px);
+}
+
+nav .social-media ul li:hover a{
+    color: #6e78a5;
+}
+
 
 /*--------------------------home----------------------*/
 
@@ -94,29 +130,15 @@ nav ul li a:hover::after{
     z-index: -100;
 }
 
-.home-snippet{
+.blobfixed{
+    position: fixed;
+    z-index: -20;
+}
+
+.blobs{
     position: absolute;
-    width: 100%;
-    z-index: -10;
 }
 
-.home-snippet img{
-    margin-top: 11%;
-    margin-left: 15%;
-    width: 30%;
-}
-
-.home-snippet2{
-    position: absolute;
-    width: 100%;
-    z-index: -10;
-}
-
-.home-snippet2 img{
-    margin-top: 40%;
-    margin-left: 85%;
-    width: 30%;
-}
 
 .home-main{
     width: 100%;
@@ -129,6 +151,7 @@ nav ul li a:hover::after{
     width: 40%;
     margin-top: 25%;
     position: relative;
+    z-index: -30;
 }
 
 .home-logo img {
@@ -142,58 +165,35 @@ nav ul li a:hover::after{
 
 .home-text{
     margin-top: 10%;
-    margin-left: 3%;
     font-size: 20px;
-    color: #7d7d7d;
+    color: #3b467c;
+    z-index: -30;
 }
 
 
 .home-text h1{
     font-size: 60px;
-    color:#7d7d7d;
+    color:#3b467c;
 }
 
 .home-text h1 span{
     font-size: 72px;
-    color: #4e7d7d;
+    color: #3b467c;
 }
 
-.home .social-media{
-    padding: 40px 60px;
-}
-
-.home-text .social-media ul li{
-    display: inline-block;
-    margin-right: 20px;
-    color:#cfcdcd;
-    font-size: 40px;
-    cursor: pointer;
-    transition: transform 0.5s;
-
-}
-
-.home-text .social-media ul li a{
-    color: #7d7d7d;
-}
-
-.home-text .social-media ul li:hover{
-    transform: translateY(-5px);
-}
-
-.home-text .social-media ul li:hover a{
-    color: #4e7d7d;
-}
 
 
 /*------------------------about-----------------------*/
 
 #about{
-    padding: 20px 2%;
+    padding: 100px 2%;
     height: 100vh;
 }
 
 .row{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
+    border: 1px solid #3b467c;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -209,7 +209,7 @@ nav ul li a:hover::after{
 }
 
 .about-col-1 img{
-    margin: 15% 5% 15% 15%;
+    margin: 5% 5% 5% 15%;
     position: relative;
     width: 80%;
     height: auto;
@@ -223,33 +223,33 @@ nav ul li a:hover::after{
 
 .about-col-2 p{
     padding-top: 5px;
-    font-size: 20px;
+    font-size: 18px;
     line-height: 1.2;
 }
 
 .tab-titles{
     display: flex;
-    margin: 20px 0 40px;
+    margin: 30px 0 30px;
 }
 
 .tab-links{
     margin-right: 80px;
     font-size: 24px;
     font-weight: 600;
-    color:#222222;
+    color:#3b467c;
     cursor: pointer;
     position: relative;
 }
 
 .tab-links:hover{
-    color: #3b3b3b;
+    color: #6e78a5;
 }
 
 .tab-links::after{
     content: '';
     width: 0;
     height: 3px;
-    background-color: #4e7d7d;
+    background-color: #3b467c;
     position: absolute;
     left: 0;
     bottom: -8px;
@@ -262,9 +262,6 @@ nav ul li a:hover::after{
 
 .tab-links.active-link::after{
     width: 100%;
-}
-.tab-titles{
-    margin-top: 5%;
 }
 
 .tab-contents.skills.active-tab{
@@ -282,10 +279,10 @@ nav ul li a:hover::after{
 
 .skillcard img{
     margin: 10px 20px;
-    width: 70px;
+    width: 60px;
     border-radius: 50%;
-    background-color: #cfcdcd;
-    box-shadow: 0 0 5px 4px #4e7d7d;
+    background-color: #6e78a5;
+    box-shadow: 0 0 5px 4px #6e78a5;
 }
 
 .skillcard h3{
@@ -294,14 +291,14 @@ nav ul li a:hover::after{
 
 .tab-contents ul li{
     font-size: 18px;
-    font-weight: 600;
+    font-weight: 500;
     line-height: 1.5;
     list-style: none;
     margin: 10px 0;
 }
 
 .tab-contents ul li span{
-    color: #4e7d7d;
+    color: #3b467c;
     font-weight: 500;
     font-size: 20px;
     font-weight: 580;
@@ -317,12 +314,14 @@ nav ul li a:hover::after{
 
 /*------------------------services-----------------------*/
 #services{
-    margin: 20px 2%;
+    padding: 100px 2%;
     height: 100vh;
 }
 
 #services .container{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
+    border: 1px solid #3b467c;
     border-radius: 30px;
     padding-bottom: 5px;
 }
@@ -341,15 +340,16 @@ nav ul li a:hover::after{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
     grid-gap: 100px;
+    color: #f0f0ffc4;
 }
 
 .services-list div{
-    background: #222222;
+    background: #3b467c;
     padding: 40px;
     font-size: 18px;
     font-weight: 550;
     border-radius: 10px;
-    transition: background 0.5s, transform 0.5s;
+    transition: background 0.5s, transform 0.5s, box-shadow 0.5s;
 }
 
 .services-list div i{
@@ -364,26 +364,29 @@ nav ul li a:hover::after{
 
 .services-list div a{
     text-decoration: none;
-    color: #222222;
+    color: #3b467c;
     font-size: 15px;
     margin-top: 20px;
     display: inline-block;
 }
 
 .services-list div:hover{
-    background-color: #4e7d7d;
+    background-color: #6e78a5;
+    box-shadow: 5px 5px 5px 5px #5b637a;
     transform: translateY(-10px);
 }
 
 /*------------------------websites-----------------------*/
 
 #websites{
-    padding: 20px 2%;
-    height: 100vh;
+    padding: 100px 2%;
+    height: 100%;
 }
 
 #websites .container{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
+    border: 1px solid #3b467c;
     border-radius: 30px;
 }
 
@@ -400,7 +403,6 @@ nav ul li a:hover::after{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-gap: 100px;
-    padding-bottom: 5%;
 }
 
 .website{
@@ -420,7 +422,7 @@ nav ul li a:hover::after{
 .website .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #4e7d7d);
+    background: linear-gradient(rgba(255, 255, 255, 0.8), #3b467c);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -452,11 +454,11 @@ nav ul li a:hover::after{
 
 .website .layer .buttons a{
     margin: 0 20px;
-    color: #4e7d7d;
+    color: #3b467c;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #fff;
+    background: #f0f0ffc4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -473,14 +475,18 @@ nav ul li a:hover::after{
 
 
 
+
+
 /*------------------------games-----------------------*/
 #games{
-    padding: 20px 2%;
+    padding: 100px 2%;
     height: 100%;
 }
 
 #games .container{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
+    border: 1px solid #3b467c;
     border-radius: 30px;
 }
 
@@ -497,7 +503,6 @@ nav ul li a:hover::after{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-gap: 100px;
-    padding-bottom: 5%;
 }
 
 .game{
@@ -517,7 +522,7 @@ nav ul li a:hover::after{
 .game .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #4e7d7d);
+    background: linear-gradient(rgba(255, 255, 255, 0.8), #3b467c);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -549,11 +554,11 @@ nav ul li a:hover::after{
 
 .game .layer .buttons a{
     margin: 0 20px;
-    color: #4e7d7d;
+    color: #3b467c;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #fff;
+    background: #f0f0ffc4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -572,11 +577,14 @@ nav ul li a:hover::after{
 /*------------------------programs-----------------------*/
 
 #programs{
-    padding: 20px 2%;
+    padding: 100px 2%;
+    height: 100%;
 }
 
 #programs .container{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
+    border: 1px solid #3b467c;
     border-radius: 30px;
 }
 
@@ -593,7 +601,6 @@ nav ul li a:hover::after{
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
     grid-gap: 100px;
-    padding-bottom: 5%;
 }
 
 .program{
@@ -613,7 +620,7 @@ nav ul li a:hover::after{
 .program .layer{
     width: 100%;
     height: 0;
-    background: linear-gradient(rgba(0, 0, 0, 0.6), #4e7d7d);
+    background: linear-gradient(rgba(255, 255, 255, 0.8), #3b467c);
     border-radius: 10px;
     position: absolute;
     left: 0;
@@ -640,11 +647,11 @@ nav ul li a:hover::after{
 
 .program .layer a{
     margin: 5% 20px 0 20px;
-    color: #4e7d7d;
+    color: #3b467c;
     text-decoration: none;
     font-size: 32px;
     line-height: 60px;
-    background: #fff;
+    background: #f0f0ffc4;
     width: 60px;
     height: 60px;
     border-radius: 50%;
@@ -665,11 +672,12 @@ nav ul li a:hover::after{
 /*------------------------contact-----------------------*/
 
 #contact{
-    padding: 20px 2%;
+    padding: 100px 2%;
 }
 
 #contact .container{
-    background: #545454;
+    background-color: transparent;
+    backdrop-filter: blur(100px);
     border-radius: 30px;
 }
 
@@ -690,7 +698,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left p i{
-    color: #4e7d7d;
+    color: #3b467c;
     margin-right: 5%;
     font-size: 25px;
 }
@@ -702,7 +710,7 @@ nav ul li a:hover::after{
 .contact-left .social-media ul li{
     display: inline-block;
     margin-right: 20px;
-    color:#cfcdcd;
+    color:#3b467c;
     font-size: 40px;
     cursor: pointer;
     transition: transform 0.5s;
@@ -710,7 +718,7 @@ nav ul li a:hover::after{
 }
 
 .contact-left .social-media ul li a{
-    color: #cfcdcd;
+    color: #3b467c;
 }
 
 .contact-left .social-media ul li:hover{
@@ -718,25 +726,25 @@ nav ul li a:hover::after{
 }
 
 .contact-left .social-media ul li:hover a{
-    color: #4e7d7d;
+    color: #6e78a5;
 }
 
 .btn{
     display: block;
     margin-bottom: 5%;
     width: fit-content;
-    background-color: #cfcdcd;
-    border: 3px solid #4e7d7d;
+    background-color: #3b467c;
+    border: 1px solid #3b467c;
     padding: 14px 50px;
     border-radius: 6px;
     text-decoration: none;
-    color:#222222;
+    color:#f0f0ffc4;
     transition: background 0.3s;
     font-size: 16px;
 }
 
 .btn:hover{
-    background: #4e7d7d;
+    background: #6e78a5;
 }
 
 .contact-right form{
@@ -745,12 +753,12 @@ nav ul li a:hover::after{
 
 form input, form textarea{
     width: 100%;
-    border: 0;
+    border: 1px solid #3b467c;
     outline: none;
-    background: #cfcdcd;
+    background: #f0f0ffc4;
     padding: 15px;
     margin: 15px 0;
-    color: #222222;
+    color: #3b467c;
     font-size: 18px;
     border-radius: 6px;
     resize: none;
@@ -764,8 +772,13 @@ form textarea{
     width: 100%;
     text-align: center;
     padding: 25px 0;
-    background: #222222;
+    background: #3b467c;
     margin-top: 20px;
+    z-index: -30;
+}
+
+.copyright p{
+    color: #f0f0ffc4;
 }
 
 
